<resources>
    <string name="app_name">AppLogKey</string>
    <string name="log_key"> </string>
    <string name="log">LOG\'</string>
    <string name="key">KEY</string>
    <string name="accueil_log_key">Accueil Log\' Key</string>
    <string name="font_haut">font haut</string>
    <string name="image_logo">image logo</string>
    <string name="ma_chambre">Ma\nchambre</string>
    <string name="chambre">chambre</string>
    <string name="ma_r_servation">Ma\nréservation</string>
    <string name="r_servation">réservation</string>
    <string name="hotel">hotel</string>
    <string name="restau">restau</string>
    <string name="compte">compte</string>
    <string name="service">service</string>
    <string name="faq">faq</string>
    <string name="notif">notif</string>
    <string name="mon_compte">Mon compte</string>
    <string name="mes_services">Mes\nservices</string>
    <string name="notifications">Notifications</string>
    <string name="faq2">FAQ</string>
    <string name="chambre_photo">chambre photo</string>
    <string name="ma_chambre2">Ma chambre</string>
    <string name="statut_de_la_chambre">Statut de la chambre</string>
    <string name="veuillez_s_lectionner_un_statut">Veuillez sélectionner un statut</string>
    <string name="disponible">Disponible</string>
    <string name="ne_pas_d_ranger">Ne pas déranger</string>
    <string name="service_de_chambre">Service de chambre</string>
    <string name="disponibilt">Disponibilté</string>
    <string name="ma_r_servation2">Ma réservation</string>
    <string name="votre_r_servation_chez_log_key">Votre réservation chez Log’Key</string>
    <string name="d_part">Départ</string>
    <string name="arriv_e">Arrivée</string>
    <string name="personnes_max">Personnes max</string>
    <string name="chambre_double">Chambre Double</string>
    <string name="prix_nuit">Prix/Nuit</string>
    <string name="_155">155€</string>
    <string name="_2_pers">2 pers</string>
    <string name="_1234322345">1234322345</string>
    <string name="num_ro_de_r_servation">Numéro de réservation :</string>
    <string name="_2_bd_jean_hibert_06400_cannes">2 Bd Jean Hibert, 06400 Cannes</string>
    <string name="adresse_de_l_h_tel">Adresse de l\'hôtel</string>
    <string name="lit_double_nvue_mer_npetit_d_jeuner_compris_n">Lit double \nVue mer \nPetit-déjeuner compris \n</string>
    <string name="pin">pin</string>
    <string name="_14_04_2022">14/04/2022</string>
    <string name="_16_04_2022">16/04/2022</string>
    <string name="mentions_l_gales">Mentions légales</string>
    <string name="les_questions_fr_quemment_pos_es">Les questions fréquemment posées :</string>
    <string name="comment_puis_je_demander_une_facture">Comment puis-je demander une facture ?</string>
    <string name="votre_e_mail_de_confirmation_pr_cise_si_les_repas_sont_compris_ou_non_dans_votre_r_servation_il_est_possible_d_ajouter_un_repas_votre_arriv_e_en_fonction_de_l_tablissement_contactez_directement_l_tablissement_1_2_jours_avant_votre_s_jour_pour_en_savoir_plus">Votre e-mail de confirmation précise si les repas sont compris ou non dans votre réservation. Il est possible d\'ajouter un repas à votre arrivée, en fonction de l\'établissement. Contactez directement l\'établissement 1 à 2 jours avant votre séjour pour en savoir plus.</string>
    <string name="votre_e_mail_de_confirmation_pr_cise_si_les_repas_sont_compris_ou_non_dans_votre_r_servation_il_est_possible_d_ajouter_un_repas_votre_arriv_e_en_fonction_de_l_tablissement_contactez_directement_l_tablissement_1_2_jours_avant_votre_s_jour_pour_en_savoir_plus2">Votre e-mail de confirmation précise si les repas sont compris ou non dans votre réservation. Il est possible d\'ajouter un repas à votre arrivée, en fonction de l\'établissement. Contactez directement l\'établissement 1 à 2 jours avant votre séjour pour en savoir plus.</string>
    <string name="vous_pouvez_avoir_acc_s_votre_facture_en_vous_rendant_sur_votre_compte_puis_ma_facture_celle_ci_peut_aussi_vous_tre_envoy_e_par_mail_sur_demande_la_r_ception">Vous pouvez avoir accès à votre facture en vous rendant sur votre compte, puis Ma facture. Celle-ci peut aussi vous être envoyée par mail sur demande à la réception.</string>
    <string name="f_a_q">F.A.Q</string>
    <string name="les_repas_sont_ils_compris_dans_ma_r_servation">Les repas sont-ils compris dans ma réservation ?</string>
    <string name="si_je_dois_annuler_ma_r_servation_dois_je_payer_des_frais_suppl_mentaires">Si je dois annuler ma réservation, dois-je payer des frais supplémentaires?</string>
    <string name="article_1_acces_a_l_application_pour_acc_der_l_application_vous_devez_poss_der_un_terminal_mobile_et_un_acc_s_au_r_seau_internet_l_application_est_t_l_chargeable_gratuitement_depuis_les_plateformes_apple_store_et_google_play_store_sur_les_terminaux_mobiles_suivants_t_l_phone_mobile_iphone_d_apple_disposant_du_syst_me_d_exploitation_ios_sous_ios_10_0_minimum_t_l_phone_mobile_disposant_du_syst_me_d_exploitation_android_lollipop_api_21_minimum_la_version_du_logiciel_de_l_application_peut_tre_mise_jour_de_temps_autre_pour_ajouter_de_nouvelles_fonctions_et_de_nouveaux_services_une_fois_l_application_install_e_sur_votre_terminal_il_vous_suffit_de_vous_connecter_en_utilisant_votre_adresse_email">ARTICLE 1- ACCES A L’APPLICATION Pour accéder à l’Application, vous devez posséder un terminal mobile et un accès au réseau Internet. L’Application est téléchargeable gratuitement depuis les plateformes « Apple Store » et « Google Play Store » sur les terminaux mobiles suivants : - téléphone mobile Iphone® d’Apple® disposant du système d’exploitation iOS sous iOS 10.0 minimum - téléphone mobile disposant du système d’exploitation Android® Lollipop (API 21) minimum. La version du logiciel de l’Application peut être mise à jour de temps à autre pour ajouter de nouvelles fonctions et de nouveaux services. Une fois l’Application installée sur votre terminal, il vous suffit de vous connecter en utilisant votre adresse email.</string>
    <string name="mon_h_tel">Mon hôtel</string>
    <string name="plan_d_acc_s">Plan d\'accès</string>
    <string name="title_activity_mon_hotel">MonHotelActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="menu_restaurant">Menu Restaurant</string>
    <string name="petit_dejeuner">Petit Déjeuner</string>
    <string name="logo">logo</string>
    <string name="document_d_identit">Document d\'identité</string>
    <string name="type_de_document">Type de Document</string>
    <string name="carte_identit">Carte Identité</string>
    <string name="x4rtbpfw4">X4RTBPFW4</string>
    <string name="num_ro_d_identit">Numéro d\'identité</string>
    <string name="nom">Nom</string>
    <string name="num_ros_de_t_l_phone">Numéros de téléphone</string>
    <string name="pr_nom">Prénom</string>
    <string name="adresses">Adresses</string>
    <string name="date_de_naissance">Date de Naissance</string>
    <string name="e_mail">E-mail</string>
    <string name="personnel">Personnel</string>
    <string name="domicile">Domicile</string>
    <string name="_0654321001">0654321001</string>
    <string name="adresse">Adresse</string>
    <string name="s_lectionner_date_et_heure">Sélectionner date et heure</string>
    <string name="statut_du_service_de_chambre">Statut du service de chambre</string>
    <string name="service_pr_vu">Service prévu</string>
    <string name="service_r_alis">Service réalisé</string>
    <string name="_17_04_2022_17h00">17/04/2022 17h00</string>
    <string name="_17_04_20022_18h00">17/04/20022 18h00</string>
    <string name="bouton_poubelle">bouton poubelle</string>
    <string name="ma_facture">Ma Facture</string>
    <string name="carte_bar_2">carte bar 2</string>
    <string name="carte_bar">carte bar</string>
    <string name="appeler_un_taxi">Appeler un taxi</string>
    <string name="payez_directement_votre_course_au_taxi">Payez directement votre course au taxi</string>
    <string name="suivi_de_mes_commandes">Suivi de mes commandes</string>
    <string name="room_service1">Room service</string>
    <string name="room_service2">Room service</string>
    <string name="room_service3">Room Service</string>
    <string name="taxi">Taxi</string>
    <string name="mes_services3">Mes Services</string>
    <string name="s_curit">Sécurité</string>
    <string name="documents_de_voyage">Documents de voyage</string>
    <string name="changer_le_mot_de_passe">Changer le mot de passe</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>
    <string name="informations_personnelles">Informations personnelles</string>
    <string name="param_tres_du_compte">Paramètres du Compte</string>
    <string name="paiements">Paiements</string>
    <string name="ma_facture2">Ma facture</string>
    <string name="mes_commandes">Mes commandes</string>
    <string name="mes_moyens_de_paiement">Mes moyens de paiement</string>
    <string name="commandes_termin_es">Commandes terminées</string>
    <string name="suivre_mes_commandes_en_cours">Suivre mes commandes en cours</string>
    <string name="mes_services5">Mes Services</string>
    <string name="r_capitulatif">Récapitulatif:</string>
    <string name="pressing">Pressing</string>
    <string name="costume_2_pi_ces">Costume 2 pièces</string>
    <string name="_16">16€</string>
    <string name="_13">13€</string>
    <string name="total">Total :</string>
    <string name="robe_courte_simple">Robe courte simple</string>
    <string name="quantit">Quantité</string>
    <string name="prix">Prix</string>
    <string name="type">Type</string>
    <string name="valider_ma_commande">Valider ma commande</string>
    <string name="une_fois_votre_commande_valid_e_veuillez_d_poser_vos_articles_au_pressing_de_l_h_tel">Une fois votre commande validée veuillez déposer vos articles au pressing de l\'hôtel</string>
    <string name="restaurant">Restaurant</string>
    <string name="petit_d_jeuner">Petit Déjeuner</string>
    <string name="bar">Bar</string>
    <string name="restauration">Restauration</string>
    <string name="todo">todo</string>
    <string name="mes_services6">Mes services</string>
    <string name="statut">Statut</string>
    <string name="titre">Titre</string>
    <string name="todoi">TODO</string>
    <string name="ma_carte">Ma Carte</string>
    <string name="_1234_5678_8765_4321">1234.5678.8765.4321</string>
    <string name="contact_urgent">Contact Urgent</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Not a valid password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="openingMsg">Ouverture du distributeur</string>
    <string name="recoverMsg">Récupérez vos clés</string>
    <string name="closeMsg">Fermez le locker après avoir récupéré la clé</string>
    <string name="okButton">OK</string>
    <string name="bienvenue_sur_key">Bienvenue sur KEY</string>
    <string name="connexion">Connexion</string>
    <string name="connectez_vous">Connectez-vous pour accéder à votre espace</string>
    <string name="bienvenue_sur">Bienvenue sur LOG\'KEY</string>
    <string name="arriereplanaccueil">arrierePlanAccueil</string>
    <string name="logoaccueil">logoAccueil</string>
    <string name="param">Paramètres</string>
    <string name="mentionsLegales">Mentions Légales</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="titleMenu">LOG\'KEY</string>
    <string name="play">play</string>
    <string name="ble_device_status_connecting">Statut : connexion</string>
</resources>