<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pinMap"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".accueil.MaReservationActivity">


    <ImageView
        android:id="@+id/imageChambrePhoto"
        android:layout_width="161dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/chambre_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:srcCompat="@drawable/chambrephoto"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <ImageView
        android:id="@+id/fontHaut"
        android:layout_width="412dp"
        android:layout_height="163dp"
        android:layout_marginTop="-70dp"
        android:contentDescription="@string/font_haut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hautappli" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="72dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/image_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/microsoftteams_image" />

    <TextView
        android:id="@+id/maReservationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/mada_bold"
        android:text="@string/ma_r_servation2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titrePageReservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/mada_medium"
        android:text="@string/votre_r_servation_chez_log_key"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/arriveeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/mada_bold"
        android:text="@string/arriv_e"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titrePageReservation" />

    <View
        android:id="@+id/divider2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/divider3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titrePageReservation" />

    <TextView
        android:id="@+id/departView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/mada_bold"
        android:text="@string/d_part"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/divider2"
        app:layout_constraintTop_toBottomOf="@+id/titrePageReservation" />

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateDepart" />

    <TextView
        android:id="@+id/titreChambreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/mada_medium"
        android:text="@string/chambre_double"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageChambrePhoto"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <TextView
        android:id="@+id/personnesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/mada_medium"
        android:text="@string/personnes_max"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageChambrePhoto" />

    <TextView
        android:id="@+id/prixNuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:text="@string/prix_nuit"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDescriptionChambre" />

    <TextView
        android:id="@+id/prix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/mada_bold"
        android:text="@string/_155"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/prixNuit"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="@+id/prixNuit"
        app:layout_constraintTop_toBottomOf="@+id/prixNuit" />

    <TextView
        android:id="@+id/nbrPersonnes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/mada_bold"
        android:text="@string/_2_pers"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/personnesText"
        app:layout_constraintTop_toBottomOf="@+id/personnesText" />

    <View
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nbrPersonnes" />

    <TextView
        android:id="@+id/textNumResa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/mada_medium"
        android:text="@string/num_ro_de_r_servation"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <TextView
        android:id="@+id/numReservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/mada_bold"
        android:text="@string/_1234322345"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textNumResa"
        app:layout_constraintStart_toEndOf="@+id/textNumResa" />

    <View
        android:id="@+id/divider5"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNumResa" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/pin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5"
        app:srcCompat="@drawable/ic_baseline_pin_drop_24"
        app:tint="#000000" />

    <TextView
        android:id="@+id/titreAdresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/mada_bold"
        android:text="@string/adresse_de_l_h_tel"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/adresseHotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2_bd_jean_hibert_06400_cannes"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/titreAdresse"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/titreAdresse"
        app:layout_constraintTop_toBottomOf="@+id/titreAdresse"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textDescriptionChambre"
        android:layout_width="165dp"
        android:layout_height="88dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/lit_double_nvue_mer_npetit_d_jeuner_compris_n"
        app:layout_constraintStart_toEndOf="@+id/imageChambrePhoto"
        app:layout_constraintTop_toBottomOf="@+id/titreChambreText" />

    <TextView
        android:id="@+id/dateArrivee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/mada_bold"
        android:text="@string/_14_04_2022"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arriveeView" />

    <TextView
        android:id="@+id/dateDepart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/mada_bold"
        android:text="@string/_16_04_2022"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/divider2"
        app:layout_constraintTop_toBottomOf="@+id/departView" />
    <ImageView
        android:id="@+id/rectangleTb"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rectangle" />

    <ImageView
        android:id="@+id/bell"
        android:layout_width="24dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleTb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rectangleTb"
        app:layout_constraintTop_toTopOf="@+id/rectangleTb"
        app:srcCompat="@drawable/bell_solid" />

    <ImageView
        android:id="@+id/bag"
        android:layout_width="29dp"
        android:layout_height="24dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleTb"
        app:layout_constraintEnd_toEndOf="@+id/rectangleTb"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangleTb"
        app:srcCompat="@drawable/cart_flatbed_suitcase_solid" />

    <ImageView
        android:id="@+id/house"
        android:layout_width="39dp"
        android:layout_height="41dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleTb"
        app:layout_constraintEnd_toEndOf="@+id/rectangleTb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangleTb"
        app:srcCompat="@drawable/house_solid" />

    <ImageView
        android:id="@+id/user"
        android:layout_width="21dp"
        android:layout_height="24dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleTb"
        app:layout_constraintEnd_toEndOf="@+id/rectangleTb"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toStartOf="@+id/rectangleTb"
        app:layout_constraintTop_toTopOf="@+id/rectangleTb"
        app:srcCompat="@drawable/user_solid" />

    <ImageView
        android:id="@+id/menu"
        android:layout_width="32dp"
        android:layout_height="25dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleTb"
        app:layout_constraintEnd_toEndOf="@+id/rectangleTb"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="@+id/rectangleTb"
        app:layout_constraintTop_toTopOf="@+id/rectangleTb"
        app:srcCompat="@drawable/bars_solid" />

</androidx.constraintlayout.widget.ConstraintLayout>